--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -1,1 +1,36 @@
-<p>principal works!</p>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="principal.component.css"> <!-- Archivo CSS para el estilo -->
+  <title>GeoPortal de Geomática</title>
+</head>
+<body>
+<header>
+  <img src="https://i.imgur.com/zBNte0T.png" title="source: imgur.com" />
+  <h1>TFG Geoportal con Openlayers y Angular</h1>
+  <p>Bienvenido al Geoportal </p>
+</header>
+
+<section class="features">
+  <div class="feature">
+    <img src="https://i.imgur.com/bPEAFaU.png" title="source: imgur.com" />
+    <h2>Dibuja y descarga tus propias geometrías</h2>
+  </div>
+  <div class="feature">
+    <img src="https://i.imgur.com/wt5qX1N.png" title="source: imgur.com" />
+    <h2>Explora las diferentas capas disponibles</h2>
+  </div>
+  <div class="feature">
+    <img src="https://i.imgur.com/oCdRZKs.png" title="source: imgur.com" />
+    <h2>Obtén las coordenadas al momento</h2>
+  </div>
+</section>
+
+<footer>
+  <a href="/">Explorar el Geoportal</a>
+  <a href="/about">Acerca de</a>
+</footer>
+</body>
+</html>
+
