--- a/src/app/component/cabecera/cabecera.component.html
+++ b/src/app/component/cabecera/cabecera.component.html
@@ -3,8 +3,8 @@
     <button mat-button routerLink="" class="GIcon"> Geoportal </button>
   </div>
   <div class="button-container">
-    <button mat-button routerLink="">Principal</button>
-    <button mat-button routerLink="/geoportal">Geoportal</button>
+    <button mat-button routerLink="/principal">Principal</button>
+    <button mat-button routerLink="">Geoportal</button>
     <button mat-button routerLink="/about">Acerca de</button>
   </div>
 </mat-toolbar>
