--- a/src/app/pages/geoportal/geoportal.component.html
+++ b/src/app/pages/geoportal/geoportal.component.html
@@ -1,6 +1,8 @@
-<app-side-bar>
-<!--  ENCAPSULANDOLO EN EL SIDE-BAR HACEMOS QUE SE PROYECTE DONDE PONGAMOS EL <NG-CONTENT>-->
+<app-side-bar [map]="map">
+  <!--  ENCAPSULANDOLO EN EL SIDE-BAR HACEMOS QUE SE PROYECTE DONDE PONGAMOS EL <NG-CONTENT>-->
   <div id="map" class="map"></div>
+
 </app-side-bar>
+
 
 
