--- a/src/app/pages/geoportal/side-bar/side-bar.component.css
+++ b/src/app/pages/geoportal/side-bar/side-bar.component.css
@@ -1,9 +1,14 @@
-
-mat-sidenav{
+.fixed-toolbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+mat-sidenav {
   margin: 16px;
   width: 250px;
   border-right: none;
-  background: #1fabe1;
+  background: #2c3e50;
   color: white;
   border-radius: 10px;
   padding: 16px;
@@ -17,10 +22,8 @@ mat-sidenav{
   display: flex;
   justify-content: center;
   align-items: center;
-
   font-size: 2rem;
   color: lightgray;
-
   border-radius: 10px;
 }
 
@@ -28,36 +31,38 @@ mat-sidenav-container {
   height: calc(100vh - 65px);
 }
 
-.dibujar-seleccionar-buttons{
+.dibujar-seleccionar-buttons {
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 220px;
 }
+
 .mat-button,
 .option-buttons {
-  background-color: #7d009f;
-  color: #fff;
+  background-color: #656565;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
   margin: 5px 2px;
+  transition: background-color 0.3s ease;
 }
+
 .mat-button:hover,
 .option-buttons:hover {
-  background-color: #48005c;
+  background-color: #969696;
 }
-
 
 .mat-menu-item {
-  background-color: #7d009f;
-  color: #fff;
+  background-color: #656565;
+  color: white;
+  transition: background-color 0.3s ease;
 }
 
-
 .mat-menu-item:hover {
-  background-color: #48005c;
+  background-color: #969696;
 }
 
 .capas {
@@ -85,23 +90,17 @@ mat-sidenav-container {
   width: 150px;
 }
 
-
-
-
-
-
 .formulario-wms {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
   padding: 10px;
-  background-color: #1fabe1;
+  background-color: #2c3e50;
   color: white;
   border-radius: 10px;
   text-align: center;
 }
-
 
 .add-remove-buttons {
   display: flex;
@@ -111,17 +110,16 @@ mat-sidenav-container {
   padding: 0 10px;
 }
 
-
 .formulario-wms button {
-  background-color: #7d009f;
-  color: #fff;
+  background-color: #656565;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
+  transition: background-color 0.3s ease;
 }
-
 
 .formulario-wms input[type="text"],
 .formulario-wms select {
@@ -134,5 +132,15 @@ mat-sidenav-container {
 }
 
 .formulario-wms button:hover {
-  background-color: #48005c;
+  background-color: #969696;
+}
+
+.custom-dialog {
+  font-size: medium;
+  width: 230px;
+  margin:auto;
+}
+
+.icon-container button{
+  margin-bottom: 20px;
 }
