--- a/src/app/pages/principal/principal.component.css
+++ b/src/app/pages/principal/principal.component.css
@@ -1,54 +1,66 @@
-/* Estilos generales */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
   text-align: center;
-  background-color: #f0f0f0;
-  padding: 40px;
-}
-
-.banner {
-  max-width: 100%;
-  height: auto;
+  background-color: #ffffff;
+  padding: 20px;
+  border-bottom: 2px solid #333;
 }
 
 h1 {
   font-size: 36px;
-  margin-top: 20px;
+  margin-top: 10px;
+  color: black;
 }
 
 p {
   font-size: 18px;
+  color: black;
+  margin-bottom: 10px;
 }
 
-/* Estilos de las características */
 .features {
+  flex: 1;
   display: flex;
-  justify-content: space-around;
-  margin: 40px 0;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px 0;
 }
 
 .feature {
+  flex: 0 0 33%;
+  box-sizing: border-box;
+  padding: 10px;
   text-align: center;
-  max-width: 300px;
 }
 
 .feature img {
-  max-width: 150px;
-  height: 150px;
-  margin-bottom: 20px;
+  max-width: 100%;
+  height: auto;
+  max-height: 150px;
+  margin-bottom: 10px;
 }
 
-/* Estilos del pie de página */
+.feature h2 {
+  font-size: 24px;
+  margin-top: 10px;
+  color: #7d009f;
+}
+
 footer {
-  background-color: #333;
+  background-color: #2c3e50;
   color: white;
   text-align: center;
   padding: 20px 0;
+  border-top: 2px solid #333;
 }
 
 footer a {
